--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,15 @@
   <body>
     <hr />
     <h1>Viktoria Teichler</h1>
-    <hr />
+    <h3 class="text-center text-muted">Junior Front-end developer</h3>
+    <hr / class="mb-5">
+
+    <div class="menu">
+      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="education.html">Education</a>
+    </div>
+
     <img
       align="right"
       src="visuals/cut-pic.png"
@@ -35,13 +43,52 @@
       class="cut-pic img-fluid"
       style="width: 170px"
     />
-
-    <div class="menu">
-      <a class="nav-link" href="#">Contact</a>
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="#">Education</a>
+    <div class="about-container mt-5">
+      <div class="row">
+        <div class="col-md-6">
+          Create new site from Git. Continuous Depleyment (meaning that every
+          time you push changes to GitHub it will also push it to the website.
+          Choose project on GitHub and Deploy (deploy means pushing your website
+          online). Domain management - to create a custom domain Add custom
+          domain For this you have to buy your domain. You can buy domains at
+          Google Domains Once you have yout domain, you can verify it on
+          Netlify. 🧵 Handcraft 💃🏻 Dance 🌍 Travel 🥾 Hiking 🎵 Eurovision Song
+          Contest 👩‍💻 Coding 🐈 Train my cat
+        </div>
+        <div class="col-md-6">
+          <img
+            src="visuals/handcraft-woman.JPG"
+            class="img-fluid"
+            alt=""
+            width="120px"
+          />
+          <div>
+            <img
+              src="visuals/travel1.JPG"
+              class="img-fluid"
+              alt=""
+              width="120px"
+            />
+          </div>
+          <div>
+            <img
+              src="visuals/handcraft-earrings.JPG"
+              class="img-fluid"
+              alt=""
+              width="120px"
+            />
+          </div>
+          <div>
+            <img
+              src="visuals/travel2.JPG"
+              class="img-fluid"
+              alt=""
+              width="120px"
+            />
+          </div>
+        </div>
+      </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
