--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
   <body>
     <hr />
     <h1>Viktoria Teichler</h1>
-    <hr />
+    <h3 class="text-center text-muted">Junior Front-end developer</h3>
+    <hr / class="mb-5">
 
     <div class="menu">
       <a class="nav-link" href="#">Contact</a>
       <a class="nav-link" href="aboutme.html">About</a>
-      <a class="nav-link" href="#">Education</a>
+      <a class="nav-link" href="education.html">Education</a>
     </div>
 
-    <div class="row">
-      <div class="col-ml">
+    <div class="row mt-5">
+      <div class="col-ml-6">
         <div class="row">
           <div class="col-md-12"><br /></div>
         </div>
         <div class="row">
-          <div class="col-md-5 border">
+          <div class="col-md-6">
             <div class="card mb-3">
               <div class="row no-gutters">
                 <div class="col-md-6">
@@ -77,19 +78,9 @@
             </div>
           </div>
 
-          <div class="col-md-7 border">
+          <div class="col-md-6">
             <div class="card mb-3">
               <div class="row no-gutters">
-                <div class="col-md-6">
-                  <a
-                    href="https://zesty-rugelach-208791.netlify.app/"
-                    target="_blank"
-                    ><img
-                      src="visuals/weather.jpg"
-                      class="card-img img-fluid"
-                      alt="..."
-                  /></a>
-                </div>
                 <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">
@@ -109,13 +100,23 @@
                     </p>
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <a
+                    href="https://zesty-rugelach-208791.netlify.app/"
+                    target="_blank"
+                    ><img
+                      src="visuals/weather.jpg"
+                      class="card-img img-fluid"
+                      alt="..."
+                  /></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-md-7 border">
+          <div class="col-md-6">
             <div class="card mb-3">
               <div class="row no-gutters">
                 <div class="col-md-6">
@@ -124,7 +125,7 @@
                     target="_blank"
                   >
                     <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
+                      src="visuals/zen-project.JPG"
                       class="card-img img-fluid"
                       alt="..."
                   /></a>
@@ -135,7 +136,7 @@
                       <a
                         href="https://celebrated-gnome-116124.netlify.app/"
                         target="_blank"
-                        >Zen</a
+                        >Zen-Fabrika</a
                       >
                     </h5>
 
@@ -150,21 +151,17 @@
               </div>
             </div>
           </div>
-          <div class="col-md-5 border">
+          <div class="col-md-6">
             <div class="card mb-3">
               <div class="row no-gutters">
                 <div class="col-md-6">
-                  <a href="" target="_blank">
-                    <img
-                      src="https://s3.resume.io/cdn-cgi/image/width=544,height=480,dpr=1.5,fit=crop,gravity=top,quality=75,format=auto/uploads/local_template_image/image/389/persistent-resource/new-york-resume-templates.jpg"
-                      class="card-img img-fluid"
-                      alt="..."
-                  /></a>
-                </div>
-                <div class="col-md-6">
                   <div class="card-body">
                     <h5 class="card-title">
-                      <a href="" target="_blank">Responsive</a>
+                      <a
+                        href="https://playful-monstera-ced22b.netlify.app/"
+                        target="_blank"
+                        >Sweden</a
+                      >
                     </h5>
 
                     <p class="card-text">
@@ -172,14 +169,21 @@
                     </p>
                   </div>
                 </div>
+                <div class="col-md-6">
+                  <a
+                    href="https://playful-monstera-ced22b.netlify.app/"
+                    target="_blank"
+                  >
+                    <img
+                      src="visuals/sweden-project.JPG"
+                      class="card-img img-fluid"
+                      alt="..."
+                      width="300px"
+                  /></a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-7 border mb-5">Hello</div>
-          <div class="col-md-5 border mb-5">hello</div>
         </div>
       </div>
     </div>
