--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
     <hr / class="mb-5">
 
     <div class="menu">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="contact.html">Contact</a>
       <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="aboutme.html">About</a>
     </div>
