--- a/education.html
+++ b/education.html
@@ -39,7 +39,7 @@
     </div>
     <h4 class="text-center">Education</h4>
     <div class="container">
-      <div class="cards">
+      <div class="cards-education">
         <div class="university">
           <h4>University</h4>
           <img src="visuals/lund.png" alt="" width="30px" />
