--- a/index.html
+++ b/index.html
@@ -37,164 +37,72 @@
       <a class="nav-link" href="education.html">Education</a>
       <a class="nav-link" href="index.html">Home</a>
     </div>
-
-    <div class="row mt-5">
-      <div class="col-ml-6">
-        <div class="row">
-          <div class="col-md-12"><br /></div>
+    <div class="cards">
+      <div class="card md" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="visuals/sweden-project.JPG"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Sweden project</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card mb-3">
-              <div class="row no-gutters">
-                <div class="col-md-6">
-                  <a
-                    href="https://celebrated-gnome-116124.netlify.app/"
-                    target="_blank"
-                  >
-                    <img
-                      src="visuals/resume.JPG"
-                      class="card-img mt-4 img-fluid"
-                      alt="..."
-                  /></a>
-                </div>
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <a
-                        href="https://celebrated-gnome-116124.netlify.app/"
-                        target="_blank"
-                        >Resume</a
-                      >
-                    </h5>
+      </div>
 
-                    <p class="card-text">
-                      <small class="text-muted"
-                        >A resume as a PDF is boring. So I made mine as a
-                        landing page instead. The source code is open and the
-                        design is made by me.</small
-                      >
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="card mb-3">
-              <div class="row no-gutters">
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <a
-                        href="https://zesty-rugelach-208791.netlify.app/"
-                        target="_blank"
-                        >Weather App</a
-                      >
-                    </h5>
-
-                    <p class="card-text">
-                      <small class="text-muted"
-                        >My first real coding project was to build a weather
-                        app. Using my newly coding skills using HTML, CSS and
-                        Javascript.</small
-                      >
-                    </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <a
-                    href="https://zesty-rugelach-208791.netlify.app/"
-                    target="_blank"
-                    ><img
-                      src="visuals/weather.jpg"
-                      class="card-img img-fluid"
-                      alt="..."
-                  /></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card mb-3">
-              <div class="row no-gutters">
-                <div class="col-md-6">
-                  <a
-                    href="https://celebrated-gnome-116124.netlify.app/"
-                    target="_blank"
-                  >
-                    <img
-                      src="visuals/zen-project.JPG"
-                      class="card-img img-fluid"
-                      alt="..."
-                  /></a>
-                </div>
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <a
-                        href="https://celebrated-gnome-116124.netlify.app/"
-                        target="_blank"
-                        >Zen-Fabrika</a
-                      >
-                    </h5>
-
-                    <p class="card-text">
-                      <small class="text-muted"
-                        >This is my first project for a client who wanted a
-                        landing page for their two businesses.</small
-                      >
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card mb-3">
-              <div class="row no-gutters">
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      <a
-                        href="https://playful-monstera-ced22b.netlify.app/"
-                        target="_blank"
-                        >Sweden</a
-                      >
-                    </h5>
-
-                    <p class="card-text">
-                      <small class="text-muted"
-                        >A project from my coding workshops where we were
-                        suppost to create a website after getting the design in
-                        Figma.</small
-                      >
-                    </p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <a
-                    href="https://playful-monstera-ced22b.netlify.app/"
-                    target="_blank"
-                  >
-                    <img
-                      src="visuals/sweden-project.JPG"
-                      class="card-img img-fluid"
-                      alt="..."
-                      width="300px"
-                  /></a>
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="card md" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="visuals/weather.jpg"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Weather App</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
+    <div class="cards">
+      <div class="card" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="visuals/resume.JPG"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Resume</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
 
+      <div class="card" style="width: 18rem">
+        <img
+          class="card-img-top"
+          src="visuals/zen-project.JPG"
+          alt="Card image cap"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Weather App</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
