--- a/aboutme.html
+++ b/aboutme.html
@@ -32,10 +32,10 @@
       <hr />
     </div>
     <div class="menu mt-5">
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
-      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="contact.html">Contact</a>
     </div>
 
     <img
@@ -119,15 +119,7 @@
       allowfullscreen
     ></iframe>
     <footer>
-      <div>
-        Viktoria Teichler
-        <a
-          href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
-          target="_blank"
-        >
-          <i class="fa-brands fa-linkedin m-2"></i
-        ></a>
-      </div>
+      <div>Viktoria Teichler</div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
