--- a/contact.html
+++ b/contact.html
@@ -32,14 +32,15 @@
       <hr />
     </div>
     <div class="menu mt-5">
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="index.html">Home</a>
+
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
-      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="contact.html">Contact</a>
     </div>
     <div class="contact-container text-center">
       <h4>Let's get in touch!</h4>
-      <h6>Email</h6>
+      <div><i class="fa-light fa-circle-envelope"></i></div>
       <div class="contact-info">
         <a
           href="mailto:viktoria.teichler@outlook.com"
@@ -56,12 +57,11 @@
           >
         </div>
       </div>
-      <h6>Phone</h6>
+
       <div class="contact-info">+46 703 35 83 65</div>
     </div>
-    <script
-      src="https://kit.fontawesome.com/369d6c2dcb.js"
-      crossorigin="anonymous"
-    ></script>
+    <footer>
+      <div>Viktoria Teichler</div>
+    </footer>
   </body>
 </html>
