--- a/education.html
+++ b/education.html
@@ -32,10 +32,11 @@
       <hr />
     </div>
     <div class="menu mt-5">
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="index.html">Home</a>
+
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
-      <a class="nav-link" href="index.html">Home</a>
+      <a class="nav-link" href="contact.html">Contact</a>
     </div>
     <h4 class="text-center">Education</h4>
     <div class="container">
@@ -44,19 +45,19 @@
           <h4>University</h4>
           <img src="visuals/lund.png" alt="" width="30px" />
           <span class="name-school">Lund University</span>
-          <div class="degree">Master's degree in Service Management</div>
+          <div class="degree mt-3">Master's degree in Service Management</div>
           <div class="years">2018 - 2020</div>
           <br />
           <img src="visuals/dalarna.png" alt="" width="30px" />
           <span class="name-school">Dalarna University</span>
-          <div class="degree">
+          <div class="degree mt-3">
             Bachelor degree in business administration and management, General
           </div>
           <div class="years">2014 - 2018</div>
           <br />
           <img src="visuals/seeu.png" alt="" width="30px" />
           <span class="name-school">South East European University (seeu)</span>
-          <div class="degree">
+          <div class="degree mt-3">
             One year of study in North Macedonia as an exchange student
           </div>
           <div class="years">2016 - 2017</div>
@@ -129,6 +130,9 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div>Viktoria Teichler</div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
