--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
+
+    <link rel="icon" href="visuals/cut-pic 1.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
@@ -32,39 +35,35 @@
       <hr />
     </div>
     <div class="menu mt-5">
-      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="index.html">Home</a>
       <a class="nav-link" href="aboutme.html">About</a>
       <a class="nav-link" href="education.html">Education</a>
-      <a class="nav-link" href="index.html">Home</a>
+
+      <a class="nav-link" href="contact.html">Contact</a>
     </div>
     <div class="cards">
-      <div class="card md" style="width: 18rem">
-        <a
-          href="https://playful-monstera-ced22b.netlify.app/"
-          target="
-        "
-        >
+      <div class="card" style="width: 18rem">
+        <a href="https://lustrous-longma-2c6ff3.netlify.app/" target="_blank">
           <img
             class="card-img-top img-fluid"
-            src="visuals/sweden-project.JPG"
+            src="visuals/react-project.JPG"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <h5 class="card-title">
             <a
-              href="https://playful-monstera-ced22b.netlify.app/"
+              href="https://lustrous-longma-2c6ff3.netlify.app/"
               target="_blank"
-              >Responsive Project</a
             >
+              React
+            </a>
           </h5>
-
           <p class="card-text">
-            A project after the course Responsive to make a website just that,
-            responsive. Using HTML, CSS, Bootstrap, Grids and Flexbox.
+            Final project from my course learning React. It is not jet full
+            done.
           </p>
         </div>
       </div>
-
       <div class="card md" style="width: 18rem">
         <a href="https://zesty-rugelach-208791.netlify.app/" target="_blank">
           <img
@@ -115,41 +114,39 @@
         </div>
       </div>
 
-      <div class="card" style="width: 18rem">
-        <a href="#" target="_blank">
+      <div class="card md" style="width: 18rem">
+        <a
+          href="https://playful-monstera-ced22b.netlify.app/"
+          target="
+        "
+        >
           <img
             class="card-img-top img-fluid"
-            src="visuals/reactjs.png"
+            src="visuals/sweden-project.JPG"
             alt="Card image cap"
         /></a>
         <div class="card-body">
           <h5 class="card-title">
-            <a href="#" target="_blank"> React </a>
+            <a
+              href="https://playful-monstera-ced22b.netlify.app/"
+              target="_blank"
+              >Responsive Project</a
+            >
           </h5>
+
           <p class="card-text">
-            Final project from my course learning React. Coming soon.
+            A project after the course Responsive to make a website just that,
+            responsive. Using HTML, CSS, Bootstrap, Grids and Flexbox.
           </p>
         </div>
       </div>
     </div>
     <footer>
-      <div>
-        Viktoria Teichler
-        <a
-          href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
-          target="_blank"
-        >
-          <i class="fa-brands fa-linkedin m-2"></i
-        ></a>
-      </div>
+      <div>Viktoria Teichler</div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/369d6c2dcb.js"
       crossorigin="anonymous"
     ></script>
   </body>
