--- a/aboutme.html
+++ b/aboutme.html
@@ -48,7 +48,7 @@
     />
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 about-images">
         <img
           src="visuals/handcraft-woman.JPG"
           class="about-pic img-fluid m-3"
