--- a/education.html
+++ b/education.html
@@ -41,99 +41,128 @@
     </div>
     <h4 class="text-center">Education</h4>
     <div class="container">
-      <div class="cards-education">
-        <div class="university">
-          <h4>University</h4>
-          <img src="visuals/lund.png" alt="" width="30px" />
-          <span class="name-school">Lund University</span>
-          <div class="degree mt-3">Master's degree in Service Management</div>
-          <div class="years">2018 - 2020</div>
-          <br />
-          <img src="visuals/dalarna.png" alt="" width="30px" />
-          <span class="name-school">Dalarna University</span>
-          <div class="degree mt-3">
-            Bachelor degree in business administration and management, General
+      <div class="cards">
+        <div class="row display-flex justify-content-space-evenly">
+          <div class="col-md-6">
+            <div class="cards-education">
+              <div class="university">
+                <h4>University</h4>
+                <img src="visuals/lund.png" alt="" width="30px" />
+                <span class="name-school">Lund University</span>
+                <div class="degree mt-3">
+                  Master's degree in Service Management
+                </div>
+                <div class="years">2018 - 2020</div>
+                <br />
+                <img src="visuals/dalarna.png" alt="" width="30px" />
+                <span class="name-school">Dalarna University</span>
+                <div class="degree mt-3">
+                  Bachelor degree in business administration and management,
+                  General
+                </div>
+                <div class="years">2014 - 2018</div>
+                <br />
+                <img src="visuals/seeu.png" alt="" width="30px" />
+                <span class="name-school"
+                  >South East European University (seeu)</span
+                >
+                <div class="degree mt-3">
+                  One year of study in North Macedonia as an exchange student
+                </div>
+                <div class="years">2016 - 2017</div>
+              </div>
+            </div>
           </div>
-          <div class="years">2014 - 2018</div>
-          <br />
-          <img src="visuals/seeu.png" alt="" width="30px" />
-          <span class="name-school">South East European University (seeu)</span>
-          <div class="degree mt-3">
-            One year of study in North Macedonia as an exchange student
+          <div class="col-md-6">
+            <div class="courses">
+              <h4>Coding 👩‍💻</h4>
+              <div class="course-name">React</div>
+              <div class="content">
+                Six weeks intensive course on how to work with react. This
+                course is still running and I expect to be done mid March.
+              </div>
+              <div class="years">06.02.2023 - on going</div>
+              <div class="coding-links">
+                <span class="project-link">
+                  <a
+                    href="https://lustrous-longma-2c6ff3.netlify.app/"
+                    target="_blank"
+                    class="project-link"
+                    >Project</a
+                  ></span
+                >
+              </div>
+              <div class="course-name">Responsive</div>
+              <div class="content">
+                In this workshop I learned how to make a webpage responsive
+                using HTML and CSS.
+              </div>
+              <div class="years">02.01.2022 - 06.02.2023</div>
+              <div class="coding-links">
+                <span class="project-link">
+                  <a
+                    href="https://playful-monstera-ced22b.netlify.app/"
+                    target="_blank"
+                    >Project</a
+                  >
+                </span>
+                <span class="certificate-link">
+                  <a
+                    href="https://www.shecodes.io/certificates/2b9f16d35a6a7f3e04f230db4b685d36"
+                    target="_blank"
+                    >Certificate</a
+                  >
+                </span>
+              </div>
+              <div class="course-name">Web Development</div>
+              <div class="content">
+                Eight intensive weeks of more advanced learning in the SheCodes
+                Plus workshop. Including: <br />
+                > HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting <
+              </div>
+              <div class="years">07.11.2022 - 02.01.2023</div>
+              <div class="coding-links">
+                <span class="project-link">
+                  <a
+                    href="https://zesty-rugelach-208791.netlify.app/"
+                    target="_blank"
+                    >Project</a
+                  ></span
+                >
+                <span class="certificate-link">
+                  <a
+                    href="https://www.shecodes.io/certificates/59278ba08739d86318649be646e8ec6c"
+                    target="_blank"
+                    >Certificate</a
+                  ></span
+                >
+              </div>
+              <div class="course-name">Introduction to coding</div>
+              <div class="content">
+                Three weeks of introduction to coding. Including <br />
+                > basic HTML, CSS, Javascript ES6, and Visual Studio Code <
+              </div>
+              <div class="years">17.10.2022 - 07.11.2022</div>
+              <div class="coding-links">
+                <span class="project-link">
+                  <a
+                    href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
+                    target="_blank"
+                    class="project-link"
+                    >Project</a
+                  ></span
+                >
+                <span class="certificate-link">
+                  <a
+                    href="https://www.shecodes.io/certificates/94ab0f540ffede8deaafb3555503c447"
+                    target="_blank"
+                    class="certificate-link"
+                    >Certificate</a
+                  ></span
+                >
+              </div>
+            </div>
           </div>
-          <div class="years">2016 - 2017</div>
-        </div>
-
-        <div class="courses">
-          <h4>Coding 👩‍💻</h4>
-          <div class="course-name">React</div>
-          <div class="content">
-            Six weeks intensive course on how to work with react. This course is
-            still running and I expect to be done 8/3-2023.
-          </div>
-          <div class="years">06.02.2023 - on going</div>
-          <a
-            href="https://lustrous-longma-2c6ff3.netlify.app/"
-            target="_blank"
-            class="project-link"
-            >Final project in progress</a
-          >
-          <div class="course-name">Responsive</div>
-          <div class="content">
-            In this workshop I learned how to make a webpage responsive using
-            HTML and CSS.
-          </div>
-          <div class="years">02.01.2022 - 06.02.2023</div>
-          <a
-            href="https://playful-monstera-ced22b.netlify.app/"
-            target="_blank"
-            class="project-link"
-            >Final project</a
-          >
-          <a
-            href="https://www.shecodes.io/certificates/2b9f16d35a6a7f3e04f230db4b685d36"
-            target="_blank"
-            class="certificate-link"
-            >Certificate</a
-          >
-          <div class="course-name">Web Development</div>
-          <div class="content">
-            Eight intensive weeks of more advanced learning in the SheCodes Plus
-            workshop. Including: <br />
-            > HTML, CSS, Javascript ES6, API, GitHub, Bootstrap, Hosting <
-          </div>
-          <div class="years">07.11.2022 - 02.01.2023</div>
-          <a
-            href="https://zesty-rugelach-208791.netlify.app/"
-            target="_blank"
-            class="project-link"
-            >Final project</a
-          >
-          <a
-            href="https://www.shecodes.io/certificates/59278ba08739d86318649be646e8ec6c"
-            target="_blank"
-            class="certificate-link"
-            >Certificate</a
-          >
-          <div class="course-name">Introduction to coding</div>
-          <div class="content">
-            Three weeks of introduction to coding. Including <br />
-            > basic HTML, CSS, Javascript ES6, and Visual Studio Code <
-          </div>
-          <div class="years">17.10.2022 - 07.11.2022</div>
-          <a
-            href="https://www.shecodes.io/workshops/shecodes-basics-1d90c468-6732-4c94-8980-0c2cf8de08d3/projects/1253460"
-            target="_blank"
-            class="project-link"
-            >Final project</a
-          >
-
-          <a
-            href="https://www.shecodes.io/certificates/94ab0f540ffede8deaafb3555503c447"
-            target="_blank"
-            class="certificate-link"
-            >Certificate</a
-          >
         </div>
       </div>
     </div>
