--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/369d6c2dcb.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
@@ -41,25 +45,40 @@
     </div>
     <div class="contact-container text-center">
       <h4>Let's get in touch!</h4>
-      <div><i class="fa-light fa-circle-envelope"></i></div>
+      <div class="mt-4"><i class="fa-light fa-circle-envelope"></i></div>
       <div class="contact-info">
-        <a
-          href="mailto:viktoria.teichler@outlook.com"
-          class="text-decoration-none"
-          >viktoria.teichler@outlook.com</a
-        >
-        <h6>LinkedIn</h6>
+        <i class="fas fa-envelope"></i>
+        <div>
+          <a
+            href="mailto:viktoria.teichler@outlook.com"
+            class="text-decoration-none"
+            >viktoria.teichler@outlook.com
+          </a>
+        </div>
+        <i class="fab fa-linkedin mt-4"></i>
         <div class="contact-info">
           <a
             href="https://www.linkedin.com/in/viktoria-teichler-345715139/"
             target="_blank"
             class="text-decoration-none"
-            ><i class="fa-brands fa-linkedin"></i> Viktoria Teichler</a
+          >
+            Viktoria Teichler</a
           >
         </div>
+        <div class="contact-info">
+          <i class="fab fa-github-square mt-4"></i>
+          <div>
+            <a
+              href="https://github.com/TeichlerV"
+              class="text-decoration-none"
+              target="_blank"
+              >Teichler.V</a
+            >
+          </div>
+        </div>
+        <i class="fas fa-phone-square mt-4"></i>
       </div>
-
-      <div class="contact-info">+46 703 35 83 65</div>
+      <div class="phone-number">+46 703 35 83 65</div>
     </div>
     <footer>
       <div>Viktoria Teichler</div>
